# CodeGuard_API

./: .codeguard_rules.json  .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  LLM_INTEGRATION_FIXES_SUMMARY.md  Makefile  README.md  SECURITY_FIXES_SUMMARY.md  adaptive_prompt_generator.py  advanced_prompt_master.py  ai_improvement_demo.py  analysis_cache.py  app.yaml  audit.py  auth.py  chatgpt_integration.py  clean_code_prompt_enhancer.py  dashboard.py  deepseek_fim_demo.py  deepseek_function_calling_demo.py  deepseek_keepalive_handler.py  deepseek_prefix_completion_demo.py  demo_semantic_improvements.py  docker-compose.yml  enhanced_audit.py  enhanced_deepseek_integration.py  enhanced_repository_analysis_demo.py  false_positive_filter.py  fim_demo_results.py  fix_extension_packaging.md  git_analyzer.py  git_context_demo.py  github_integration_demo.py  github_repo_context.py  gpt_connector.py  granular_rule_config.py  (+48 more)
.well-known/: openapi.yaml
attached_assets/: Pasted--CodeGuard-VS-Code-Extension-Specification-Overview-Goal-Create-a-Visual-Studio-Code-extension-1751088881235_1751088881236.txt  Pasted--Specific-Issues-Found-by-CodeGuard-1-error-F401-matplotlib-animation-FuncAnimation-impo-1751190893213_1751190893214.txt  Pasted--The-Error-Explained-Server-URL-http-34-55-167-13-5000-is-not-under-the-root-origin-https-3-1751069334694_1751069334695.txt  Pasted--You-must-improve-THIS-EXACT-Python-code-by-applying-the-specific-fixes-identified-by-CodeGuard-ana-1751190078906_1751190078907.txt  (+27 more)
config/: openapi-deployment.yaml  (+1 more)
(+40 files in other folders)
